--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,22 @@
   font-family: "Inter", sans-serif !important;
 }
 
+.ql-editor h1 {
+    font-size: 3em !important;
+}
+
+.ql-editor h2 {
+    font-size: 2.5em !important;
+}
+
+.ql-editor h3 {
+    font-size: 2em !important;
+}
+
+.ql-editor p, 
+.ql-editor ol, 
+.ql-editor ul, 
+.ql-editor pre, 
+.ql-editor blockquote {
+    font-size: 1.3em;
+}
